Final cálculo chord line y comienzo area segmentos

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt, a4paper]{article} %tamaño mínimo de letra 11pto.
 
-
+\usepackage{amsfonts} %Para poder poner letras bonitas de números naturales etc.
 \usepackage{tikz} % Para hacer recuadros para las fórmulas
 \usepackage{mdframed} % Para hacer cuadritos
 \usepackage{graphicx} % Para incluir imágenes
