final chord line, arreglos de lo ya hecho

--- a/basicas/portada.tex
+++ b/basicas/portada.tex
@@ -22,7 +22,7 @@
 
 {\Large Generación de energía con una turbina eólica flotante}\vspace{5mm}
 
-{\Large Generación de energía con una turbina eólica flotante}\vspace{5mm}
+{\Large Energy generation with a floating offshore wind turbine}\vspace{5mm}
 
 {\Large Supervisor: Matilde Santos Peña}\vspace{20mm} 
 
